--- a/n.html
+++ b/n.html
@@ -3,152 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Hub Customs | Where Vision Meets Precision</title>
+    <title>Sophisticated Professional Page</title>
     <style>
         :root {
-            --primary-white: #ffffff;
-            --electric-blue: #00d2ff;
-            --racing-red: #ff0000;
-            --deep-charcoal: #0b0e14;
-            --soft-gray: #f4f7f9;
+            /* Warmer, dimmed palette */
+            --bg-main: #F4F7F9;        /* Off-white/Dim background */
+            --bg-secondary: #E9ECEF;   /* Soft warm gray for contrast */
+            --dark-blue: #1A2A3A;      /* Deep, midnight blue */
+            --light-blue: #7FB3D5;     /* Muted, professional light blue */
+            --warm-red: #D62828;       /* Sophisticated deep red */
+            --text-main: #2C3E50;      /* Softened dark text */
+            --white: #FFFFFF;
         }
 
         body {
             margin: 0;
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            background-color: var(--primary-white);
-            color: var(--deep-charcoal);
+            padding: 0;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: var(--bg-main);
+            color: var(--text-main);
+            -webkit-font-smoothing: antialiased;
         }
 
-        /* Navigation */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 10%;
-            background: var(--primary-white);
-            border-bottom: 2px solid var(--soft-gray);
+        /* Subtle Header */
+        header {
+            padding: 60px 10% 40px;
+            background-color: var(--bg-main);
         }
 
-        .logo-text {
-            font-weight: 800;
-            font-size: 1.5rem;
-            color: var(--deep-charcoal);
+        .tagline {
+            color: var(--light-blue);
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 2px;
+            font-weight: 700;
+            font-size: 0.9rem;
+            margin-bottom: 10px;
+            display: block;
         }
 
-        .logo-text span { color: var(--electric-blue); }
+        h1 {
+            font-size: 2.8rem;
+            color: var(--dark-blue);
+            margin: 0 0 20px 0;
+            font-weight: 300; /* Lighter font weight for 'dim' professional look */
+        }
 
-        /* Hero Section */
-        .hero {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+        /* Content Section */
+        .content-block {
+            background-color: var(--bg-secondary);
             padding: 80px 10%;
-            min-height: 60vh;
-        }
-
-        .hero-content { max-width: 500px; }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            line-height: 1.1;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            color: #555;
-            margin-bottom: 30px;
-        }
-
-        /* Button Styling */
-        .btn-primary {
-            background-color: var(--electric-blue);
-            color: var(--primary-white);
-            padding: 15px 35px;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            text-transform: uppercase;
-            cursor: pointer;
-            transition: 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 210, 255, 0.3);
-        }
-
-        .btn-primary:hover {
-            background-color: var(--deep-charcoal);
-            transform: translateY(-2px);
-        }
-
-        /* Features Section */
-        .services {
-            background-color: var(--soft-gray);
-            padding: 80px 10%;
-            text-align: center;
+            border-top: 1px solid rgba(0,0,0,0.05);
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 40px;
+            grid-template-columns: 1fr 1fr;
+            gap: 60px;
+            align-items: center;
         }
 
-        .card {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            border-top: 4px solid var(--electric-blue);
-            transition: 0.3s;
+        .description {
+            font-size: 1.15rem;
+            line-height: 1.8;
+            color: var(--text-main);
+            opacity: 0.9;
         }
 
-        .card:hover { border-top-color: var(--racing-red); }
+        /* Professional CTA */
+        .btn-container {
+            margin-top: 30px;
+        }
 
-        .card h3 { margin-top: 0; color: var(--electric-blue); }
+        .btn-primary {
+            background-color: var(--warm-red);
+            color: var(--white);
+            padding: 16px 40px;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 2px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(214, 40, 40, 0.2);
+        }
 
+        .btn-primary:hover {
+            background-color: var(--dark-blue);
+            transform: translateY(-2px);
+        }
+
+        .btn-secondary {
+            color: var(--dark-blue);
+            margin-left: 25px;
+            text-decoration: none;
+            border-bottom: 2px solid var(--light-blue);
+            padding-bottom: 5px;
+            font-weight: 600;
+        }
+
+        /* Decorative Element */
+        .accent-line {
+            width: 50px;
+            height: 4px;
+            background-color: var(--light-blue);
+            margin-bottom: 30px;
+        }
+
+        footer {
+            padding: 40px 10%;
+            font-size: 0.85rem;
+            color: #8899A6;
+            border-top: 1px solid rgba(0,0,0,0.05);
+        }
     </style>
 </head>
 <body>
 
-    <nav>
-        <div class="logo-text">LIGHT HUB<span> CUSTOMS</span></div>
-        <div>
-            <button class="btn-primary" style="padding: 10px 20px;">Contact Us</button>
-        </div>
-    </nav>
+    <header>
+        <span class="tagline">Established 2026</span>
+        <h1>Executive Strategy & <br>Technical Architecture.</h1>
+    </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>WHERE VISION MEETS <span style="color: var(--electric-blue);">PRECISION</span></h1>
-            <p>Premium custom automotive lighting and aesthetics for those who demand excellence on the road.</p>
-            <button class="btn-primary">View Our Work</button>
-        </div>
-        <div class="hero-image">
-            <div style="width: 400px; height: 300px; background: #eee; border-radius: 20px; display: grid; place-items: center; color: #999;">
-                [ High-Res Car Image ]
-            </div>
-        </div>
-    </section>
-
-    <section class="services">
-        <h2>Custom Services</h2>
+    <main class="content-block">
         <div class="grid">
-            <div class="card">
-                <h3>Custom Headlights</h3>
-                <p>High-intensity LED conversions and bespoke housing designs.</p>
+            <div>
+                <div class="accent-line"></div>
+                <p class="description">
+                    In a world of digital noise, we prioritize clarity. Our approach replaces high-contrast chaos with intentional, dimmed aesthetics and high-performance engineering. We build systems that don't just work—they endure.
+                </p>
+                <div class="btn-container">
+                    <a href="#" class="btn-primary">Connect with us</a>
+                    <a href="#" class="btn-secondary">View our work</a>
+                </div>
             </div>
-            <div class="card">
-                <h3>Ambient Glow</h3>
-                <p>Interior and under-glow kits tailored to your vehicle's lines.</p>
-            </div>
-            <div class="card">
-                <h3>Precision Mods</h3>
-                <p>Technical performance upgrades with a focus on visual clarity.</p>
+            <div style="background: var(--dark-blue); height: 300px; border-radius: 4px; display: flex; align-items: center; justify-content: center; color: var(--light-blue); font-style: italic;">
+                [ Professional Imagery Placeholder ]
             </div>
         </div>
-    </section>
+    </main>
+
+    <footer>
+        &copy; 2026 Professional Partners Group. Built with intentionality.
+    </footer>
 
 </body>
 </html>
